# OpenGLEngine

./: .gitignore  CMakeLists.txt  build.bat  build.sh  run.bat  run.sh  setup_clangd.bat  setup_clangd.sh
assets/: frag.glsl  lightfrag.glsl  lightvert.glsl  vert.glsl
assets/shaders/: lightfrag.glsl  lightvert.glsl
cmake/modules/: FindGLFW3.cmake  Findassimp.cmake
example/: main.cpp
include/: shader.hpp
include/glad/: glad.h
include/oglengine/: app.hpp  camera.hpp  light.hpp  model.hpp  renderer.hpp  shader.hpp
src/: app.cpp  baseapp.cpp  camera.cpp  glad.c  light.cpp  main.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  shaderbuilder.cpp
